#------------------------------------------------------------------------------
#   This file is part of the Code_Saturne Kernel, element of the
#   Code_Saturne CFD tool.
#
#   Copyright (C) 2009 EDF S.A., France
#
#   The Code_Saturne Kernel is free software; you can redistribute it
#   and/or modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version 2 of
#   the License, or (at your option) any later version.
#
#   The Code_Saturne Kernel is distributed in the hope that it will be
#   useful, but WITHOUT ANY WARRANTY; without even the implied warranty
#   of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public Licence
#   along with the Code_Saturne Kernel; if not, write to the
#   Free Software Foundation, Inc.,
#   51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#-------------------------------------------------------------------------------

# Python files

PYFILES = \
AnalysisFeaturesView.py \
AtmosphericFlowsModel.py \
AtmosphericFlowsView.py \
BatchRunningModel.py \
BatchRunningView.py \
BodyForcesModel.py \
BodyForcesView.py \
BoundaryConditionsCoalInletView.py \
BoundaryConditionsMeteoView.py \
BoundaryConditionsMobileMeshView.py \
BoundaryConditionsParticlesModel.py \
BoundaryConditionsParticlesView.py \
BoundaryConditionsRoughWallView.py \
BoundaryConditionsScalarsView.py \
BoundaryConditionsSlidingWallView.py \
BoundaryConditionsTurbulenceInletView.py \
BoundaryConditionsVelocityInletView.py \
BoundaryConditionsWallRadiativeTransferView.py \
BoundaryConditionsView.py \
Boundary.py \
CoalCombustionModel.py \
CoalCombustionView.py \
CoalThermoChemistry.py \
CommonCombustion.py \
ConjugateHeatTransferView.py \
ConjugateHeatTransferModel.py \
CurrentSpeciesModel.py \
CurrentSpeciesView.py \
DefineUserScalarsModel.py \
DefineUserScalarsView.py \
ElectricalModelsModel.py \
FacesSelectionView.py \
FluidCharacteristicsModel.py \
FluidCharacteristicsView.py \
FluidStructureInteractionModel.py \
FluidStructureInteractionView.py \
GasCombustionModel.py \
HeadLossesModel.py \
HeadLossesView.py \
IdentityAndPathesModel.py \
IdentityAndPathesView.py \
InitializationModel.py \
InitializationView.py \
LagrangianBoundariesModel.py \
LagrangianBoundariesView.py \
LagrangianModel.py \
LagrangianOutputModel.py \
LagrangianOutputView.py \
LagrangianStatisticsModel.py \
LagrangianStatisticsView.py \
LagrangianView.py \
LocalizationModel.py \
LocalizationView.py \
MatisseCustomView.py \
MatisseGeomModel.py \
MatisseGeomView.py \
MatisseHydrauModel.py \
MatisseHydrauView.py \
MatisseModel.py \
MatisseNetworkModel.py \
MatisseNetworkView.py \
MatisseRangeDescriptionModel.py \
MatisseRangeDescriptionView.py \
MatisseThermicModel.py \
MatisseThermicView.py \
MatisseTypeModel.py \
MatisseTypeView.py \
MemoryAllocationModel.py \
MemoryAllocationView.py \
MobileMeshModel.py \
MobileMeshView.py \
NumericalParamEquationModel.py \
NumericalParamEquationView.py \
NumericalParamGlobalModel.py \
NumericalParamGlobalView.py \
OutputControlModel.py \
OutputControlView.py \
OutputSurfacicVariablesModel.py \
OutputSurfacicVariablesView.py \
OutputVolumicVariablesModel.py \
OutputVolumicVariablesView.py \
PreProcessingInformationsView.py \
ProfilesModel.py \
ProfilesView.py \
QMeiEditorView.py \
ReferenceValuesModel.py \
ReferenceValuesView.py \
SalomeHandler.py \
SolutionDomainModel.py \
SolutionDomainView.py \
SolutionVerifView.py \
StartRestartModel.py \
StartRestartView.py \
SteadyManagementModel.py \
SteadyManagementView.py \
ThermalRadiationModel.py \
ThermalRadiationView.py \
ThermalScalarModel.py \
ThermalScalarView.py \
TimeAveragesModel.py \
TimeAveragesView.py \
TimeStepModel.py \
TimeStepView.py \
TurbulenceModel.py \
TurbulenceView.py \
UserScalarPropertiesView.py \
VerifyExistenceLabelDialogView.py \
WelcomeView.py

# PyQt User Interface files

UIFILES = \
AnalysisFeaturesForm.ui \
AtmosphericFlowsForm.ui \
BatchRunningAdvancedOptionsDialogForm.ui \
BatchRunningForm.ui \
BatchRunningPBSJobManagementDialogForm.ui \
BatchRunningUserFilesDialogForm.ui \
BodyForcesForm.ui \
BoundaryConditionsCoalInletForm.ui \
BoundaryConditionsForm.ui \
BoundaryConditionsMeteoForm.ui \
BoundaryConditionsMobileMeshForm.ui \
BoundaryConditionsRoughWallForm.ui \
BoundaryConditionsScalarsForm.ui \
BoundaryConditionsSlidingWallForm.ui \
BoundaryConditionsTurbulenceInletForm.ui \
BoundaryConditionsVelocityInletForm.ui \
BoundaryConditionsWallRadiativeTransferForm.ui \
CoalCombustionForm.ui \
ConjugateHeatTransferForm.ui \
CurrentSpeciesForm.ui \
DefineUserScalarsForm.ui \
FacesSelectionForm.ui \
FluidCharacteristicsForm.ui \
FluidStructureInteractionAdvancedOptionsDialogForm.ui \
FluidStructureInteractionForm.ui \
HeadLossesForm.ui \
IdentityAndPathesForm.ui \
InitializationForm.ui \
LagrangianAdvancedOptionsDialogForm.ui \
LagrangianBoundariesForm.ui \
LagrangianForm.ui \
LagrangianOutputForm.ui \
LagrangianStatisticsForm.ui \
LocalizationForm.ui \
MatisseCustomForm.ui \
MatisseGeomForm.ui \
MatisseHydrauForm.ui \
MatisseNetworkForm.ui \
MatisseRangeDescriptionForm.ui \
MatisseThermicForm.ui \
MatisseTypeForm.ui \
MemoryAllocationForm.ui \
MeshQualityCriteriaLogDialogForm.ui \
MobileMeshForm.ui \
NumericalParamEquationForm.ui \
NumericalParamGlobalForm.ui \
OutputControlForm.ui \
OutputSurfacicVariablesForm.ui \
OutputVolumicVariablesForm.ui \
ProfilesForm.ui \
QMeiEditorForm.ui \
ReferenceValuesForm.ui \
SolutionDomainForm.ui \
SolutionDomainMeshFormatDialogForm.ui \
SolutionVerifForm.ui \
StartRestartAdvancedDialogForm.ui \
StartRestartForm.ui \
SteadyManagementForm.ui \
ThermalRadiationAdvancedDialogForm.ui \
ThermalRadiationForm.ui \
ThermalScalarForm.ui \
TimeAveragesForm.ui \
TimeStepForm.ui \
TurbulenceAdvancedOptionsDialogForm.ui \
TurbulenceForm.ui \
UserScalarPropertiesForm.ui \
VerifyExistenceLabelDialogForm.ui \
WelcomeForm.ui

# PyQt Resources files

QRCFILES = \
resources_pages.qrc

# Distribute icons directory, resources files and user interface files

EXTRA_DIST = \
icons \
$(UIFILES) \
$(QRCFILES)

# Generated files

FORMS = $(UIFILES:.ui=.py)
RESOURCES = $(QRCFILES:.qrc=_rc.py)

# Specific rules

SUFFIXES = .ui .qrc _rc.py

.ui.py:
	$(PYUIC4) -o $@ $<

.qrc_rc.py:
	$(PYRCC4) -o $@ $<

all-local: $(FORMS) $(RESOURCES)

clean-local:
	-rm -f $(FORMS) $(RESOURCES)

# Install Python library

pagesdir = $(pkgpythondir)/Pages
dist_pages_PYTHON = \
__init__.py \
$(PYFILES)

nodist_pages_PYTHON = \
$(RESOURCES) \
$(FORMS)
