## Process this file with automake to produce Makefile.in

#-------------------------------------------------------------------------------

# This file is part of Code_Saturne, a general-purpose CFD tool.
#
# Copyright (C) 1998-2018 EDF S.A.
#
# This program is free software; you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation; either version 2 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51 Franklin
# Street, Fifth Floor, Boston, MA 02110-1301, USA.

#-------------------------------------------------------------------------------

# Python files
PYFILES = \
AnalysisFeaturesView.py \
AtmosphericFlowsModel.py \
AtmosphericFlowsView.py \
BalanceModel.py \
BalanceView.py \
BatchRunningModel.py \
BatchRunningView.py \
BodyForcesModel.py \
BodyForcesView.py \
BoundaryConditionsCoalInletView.py \
BoundaryConditionsCompressibleOutletView.py \
BoundaryConditionsConvectiveInletView.py \
BoundaryConditionsElectricalView.py \
BoundaryConditionsExternalHeadLossesView.py \
BoundaryConditionsMappedInletView.py \
BoundaryConditionsMeteoView.py \
BoundaryConditionsMobileMeshView.py \
BoundaryConditionsHydraulicHeadView.py \
BoundaryConditionsPressureView.py \
BoundaryConditionsRoughWallView.py \
BoundaryConditionsScalarsView.py \
BoundaryConditionsSlidingWallView.py \
BoundaryConditionsTurbulenceInletView.py \
BoundaryConditionsVelocityInletView.py \
BoundaryConditionsWallRadiativeTransferView.py \
BoundaryConditionsView.py \
Boundary.py \
CoalCombustionModel.py \
CoalCombustionView.py \
CompressibleModel.py \
ConjugateHeatTransferView.py \
ConjugateHeatTransferModel.py \
CoriolisSourceTermsModel.py \
CoriolisSourceTermsView.py \
GroundwaterModel.py \
GroundwaterView.py \
GroundwaterLawModel.py \
GroundwaterLawView.py \
DefineUserScalarsModel.py \
DefineUserScalarsView.py \
ElectricalModel.py \
ElectricalView.py \
FacesSelectionView.py \
FansModel.py \
FansView.py \
FluidCharacteristicsModel.py \
FluidCharacteristicsView.py \
FluidStructureInteractionModel.py \
FluidStructureInteractionView.py \
GasCombustionModel.py \
GasCombustionView.py \
HeadLossesModel.py \
HeadLossesView.py \
IdentityAndPathesModel.py \
IdentityAndPathesView.py \
InitializationModel.py \
InitializationView.py \
LagrangianBoundariesModel.py \
LagrangianBoundariesView.py \
LagrangianModel.py \
LagrangianOutputModel.py \
LagrangianOutputView.py \
LagrangianStatisticsModel.py \
LagrangianStatisticsView.py \
LagrangianView.py \
LocalizationModel.py \
LocalizationView.py \
MobileMeshModel.py \
MobileMeshView.py \
NotebookModel.py \
NotebookView.py \
NumericalParamEquationModel.py \
NumericalParamEquationView.py \
NumericalParamGlobalModel.py \
NumericalParamGlobalView.py \
OutputControlModel.py \
OutputControlView.py \
OutputSurfacicVariablesModel.py \
OutputSurfacicVariablesView.py \
OutputVolumicVariablesModel.py \
OutputVolumicVariablesModelNeptune.py \
OutputVolumicVariablesView.py \
PreProcessingInformationsView.py \
PerformanceTuningModel.py \
PerformanceTuningView.py \
PorosityModel.py \
PorosityView.py \
ProfilesModel.py \
ProfilesView.py \
QMeiEditorView.py \
ReferenceValuesModel.py \
ReferenceValuesView.py \
SalomeActors.py \
SalomeHandler.py \
ScriptRunningModel.py \
SolutionDomainModel.py \
SolutionDomainView.py \
SourceTermsModel.py \
SourceTermsView.py \
StartRestartModel.py \
StartRestartView.py \
ThermalRadiationModel.py \
ThermalRadiationView.py \
ThermalScalarModel.py \
ThermalScalarView.py \
TimeAveragesModel.py \
TimeAveragesView.py \
TimeStepModel.py \
TimeStepView.py \
TurboMachineryModel.py \
TurboMachineryView.py \
TurbulenceModel.py \
TurbulenceView.py \
VerifyExistenceLabelDialogView.py \
WelcomeView.py \
XMLEditorView.py \
GlobalNumericalParametersModel.py \
GlobalNumericalParametersView.py \
NonCondensableModel.py \
NonCondensableView.py \
TurbulenceModel.py \
TurbulenceView.py  \
TurbulenceNeptuneModel.py \
TurbulenceNeptuneView.py \
SpeciesView.py \
SpeciesModel.py \
InterfacialForcesModel.py \
InterfacialForcesView.py \
InterfacialAreaModel.py \
InterfacialAreaView.py \
MainFieldsView.py \
MainFieldsModel.py \
ProfilesViewNeptune.py \
ProfilesModelNeptune.py \
TimeAveragesModelNeptune.py \
TimeAveragesViewNeptune.py \
NucleateBoilingModel.py \
NucleateBoilingView.py \
InterfacialEnthalpyModel.py \
InterfacialEnthalpyView.py \
DropletCondensationEvaporationModel.py \
DropletCondensationEvaporationView.py \
MainFieldsInitializationView.py \
MainFieldsInitializationModel.py \
CathareCouplingModel.py \
CathareCouplingView.py \
BoundaryNeptune.py \
LocalizationViewNeptune.py \
LocalizationModelNeptune.py \
BoundaryConditionsViewNeptune.py \
BoundaryConditionsModelNeptune.py \
UsersControlModel.py \
UsersControlView.py \
OutputFieldsModel.py \
OutputFieldsView.py \
OpenTurnsModel.py \
OpenTurnsView.py \
OutputControlViewNeptune.py \
OutputControlModelNeptune.py \
OutputSurfacicFieldsModel.py \
OutputSurfacicFieldsView.py \
SolidModel.py \
SolidView.py \
ThermodynamicsModel.py \
ThermodynamicsView.py  \
NumericalParamEquationModelNeptune.py \
NumericalParamEquationViewNeptune.py \
BoundaryConditionsPressureViewNeptune.py \
BoundaryConditionsEnergyView.py \
BoundaryConditionsFractionView.py \
BoundaryConditionsNonCondensableView.py \
BoundaryConditionsScalarViewNeptune.py \
BoundaryConditionsTurbulenceInletViewNeptune.py \
BoundaryConditionsVelocityInletViewNeptune.py \
BoundaryConditionsWallView.py \
BoundaryConditionsInterfacialAreaView.py \
TimeStepModelNeptune.py \
TimeStepViewNeptune.py \
ThermalRadiationModelNeptune.py \
ThermalRadiationViewNeptune.py \
BalanceViewNeptune.py \
BalanceModelNeptune.py


# PyQt User Interface files
UIFILES = \
AnalysisFeaturesForm.ui \
AtmosphericFlowsForm.ui \
BalanceForm.ui \
BatchRunningDebugOptionsHelpDialogForm.ui \
BatchRunningForm.ui \
BatchRunningStopByIterationDialogForm.ui \
BodyForcesForm.ui \
BoundaryConditionsCoalInletForm.ui \
BoundaryConditionsCompressibleOutletForm.ui \
BoundaryConditionsConvectiveInletForm.ui \
BoundaryConditionsForm.ui \
BoundaryConditionsElectricalForm.ui \
BoundaryConditionsExternalHeadLossesForm.ui \
BoundaryConditionsMappedInletForm.ui \
BoundaryConditionsMeteoForm.ui \
BoundaryConditionsMobileMeshForm.ui \
BoundaryConditionsHydraulicHeadForm.ui \
BoundaryConditionsPressureForm.ui \
BoundaryConditionsRoughWallForm.ui \
BoundaryConditionsScalarsForm.ui \
BoundaryConditionsSlidingWallForm.ui \
BoundaryConditionsTurbulenceInletForm.ui \
BoundaryConditionsVelocityInletForm.ui \
BoundaryConditionsWallRadiativeTransferForm.ui \
CoalCombustionForm.ui \
CompressibleForm.ui \
ConjugateHeatTransferForm.ui \
CoriolisSourceTermsForm.ui \
GroundwaterForm.ui \
GroundwaterLawForm.ui \
DefineUserScalarsForm.ui \
ElectricalForm.ui \
FacesSelectionForm.ui \
FansForm.ui \
FluidCharacteristicsForm.ui \
FluidStructureInteractionAdvancedOptionsDialogForm.ui \
FluidStructureInteractionForm.ui \
GasCombustionForm.ui \
HeadLossesForm.ui \
IdentityAndPathesForm.ui \
InitializationForm.ui \
LagrangianAdvancedOptionsDialogForm.ui \
LagrangianBoundariesForm.ui \
LagrangianForm.ui \
LagrangianOutputForm.ui \
LagrangianStatisticsForm.ui \
LocalizationForm.ui \
MeshQualityCriteriaLogDialogForm.ui \
MobileMeshForm.ui \
NotebookForm.ui \
NumericalParamEquationForm.ui \
NumericalParamGlobalForm.ui \
OpenTurnsForm.ui \
OutputControlForm.ui \
OutputSurfacicVariablesForm.ui \
OutputVolumicVariablesForm.ui \
PerformanceTuningForm.ui \
PorosityForm.ui \
ProfilesForm.ui \
QMeiEditorForm.ui \
ReferenceValuesForm.ui \
SolutionDomainForm.ui \
SourceTermsForm.ui \
StartRestartAdvancedDialogForm.ui \
StartRestartForm.ui \
ThermalRadiationAdvancedDialogForm.ui \
ThermalRadiationForm.ui \
ThermalScalarForm.ui \
TimeAveragesForm.ui \
TimeStepForm.ui \
TurboMachineryForm.ui \
TurbulenceAdvancedOptionsDialogForm.ui \
TurbulenceForm.ui \
TurbulenceNeptune.ui \
VerifyExistenceLabelDialogForm.ui \
VolumicZoneAdvancedDialogForm.ui \
WelcomeForm.ui \
XMLEditorForm.ui \
Noncondensable.ui \
Turbulence.ui \
Species.ui\
InterfacialForces.ui \
InterfacialArea.ui \
MainFields.ui \
GlobalNumericalParameters.ui \
GlobalNumericalParametersAdvancedOptionsDialog.ui \
InterfacialEnthalpy.ui \
NucleateBoiling.ui \
DropletCondensationEvaporation.ui \
MainFieldsInitialization.ui \
CathareCouplingForm.ui \
BoundaryConditionsNeptune.ui \
UsersControl.ui \
OutputFields.ui \
Solid.ui \
Thermodynamics.ui \
NumericalParamEquationNeptune.ui \
BoundaryConditionsPressure.ui \
BoundaryConditionsEnergy.ui \
BoundaryConditionsFraction.ui \
BoundaryConditionsNonCondensable.ui \
BoundaryConditionsScalar.ui \
BoundaryConditionsWall.ui \
BoundaryConditionsInterfacialArea.ui \
TimeStep.ui

# PyQt Resources files

QRCFILES = \
resources_pages.qrc

# Distribute icons directory, resources files and user interface files

EXTRA_DIST = \
icons \
$(UIFILES) \
$(QRCFILES)

# Generated files

FORMS = $(UIFILES:.ui=.py)
RESOURCES = $(QRCFILES:.qrc=_rc.py)

# Specific rules

PYRCC4VER = `$(PYTHON) --version 2>&1 | cut -c 8`

SUFFIXES = .ui .qrc _rc.py

if HAVE_QT5
  PYUIC=$(PYUIC5)
else
  PYUIC=$(PYUIC4)
endif

if HAVE_QT5
  PYRCC = $(PYRCC5)
else
  PYRCC = $(PYRCC4) -py$(PYRCC4VER)
endif

.ui.py:
	$(PYUIC) -o $@ $<

.qrc_rc.py:
	$(PYRCC) -o $@ $<

all-local: $(FORMS) $(RESOURCES)

clean-local:
	-rm -f $(FORMS) $(RESOURCES)

# Install Python library

pagesdir = $(pkgpythondir)/Pages
dist_pages_PYTHON = \
__init__.py \
$(PYFILES)

nodist_pages_PYTHON = \
$(RESOURCES) \
$(FORMS)
