## Process this file with automake to produce Makefile.in

#-------------------------------------------------------------------------------

# This file is part of Code_Saturne, a general-purpose CFD tool.
#
# Copyright (C) 1998-2020 EDF S.A.
#
# This program is free software; you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation; either version 2 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 51 Franklin
# Street, Fifth Floor, Boston, MA 02110-1301, USA.

#-------------------------------------------------------------------------------

# Python files
PYFILES = \
AnalysisFeaturesView.py \
AtmosphericFlowsView.py \
BalanceView.py \
BalanceViewNeptune.py \
BatchRunningDialogView.py \
BodyForcesView.py \
BoundaryConditionsCoalInletView.py \
BoundaryConditionsCompressibleOutletView.py \
BoundaryConditionsConvectiveInletView.py \
BoundaryConditionsElectricalView.py \
BoundaryConditionsEnergyView.py \
BoundaryConditionsExternalHeadLossesView.py \
BoundaryConditionsFractionView.py \
BoundaryConditionsHydraulicHeadView.py \
BoundaryConditionsInterfacialAreaView.py \
BoundaryConditionsMappedInletView.py \
BoundaryConditionsMeteoView.py \
BoundaryConditionsMobileMeshView.py \
BoundaryConditionsNonCondensableView.py \
BoundaryConditionsPressureView.py \
BoundaryConditionsPressureViewNeptune.py \
BoundaryConditionsRoughWallView.py \
BoundaryConditionsScalarsView.py \
BoundaryConditionsScalarViewNeptune.py \
BoundaryConditionsSlidingWallView.py \
BoundaryConditionsTurbulenceInletView.py \
BoundaryConditionsVelocityInletView.py \
BoundaryConditionsVelocityInletViewNeptune.py \
BoundaryConditionsWallRadiativeTransferView.py \
BoundaryConditionsTurbulenceInletViewNeptune.py \
BoundaryConditionsView.py \
BoundaryConditionsViewNeptune.py \
BoundaryConditionsWallView.py \
CathareCouplingView.py \
CoalCombustionView.py \
ConjugateHeatTransferView.py \
GroundwaterView.py \
GroundwaterLawView.py \
DefineUserScalarsView.py \
DropletCondensationEvaporationView.py \
ElectricalView.py \
FacesSelectionView.py \
FansView.py \
FluidCharacteristicsView.py \
FluidStructureInteractionView.py \
GasCombustionView.py \
GlobalNumericalParametersView.py \
HeadLossesView.py \
IdentityAndPathesView.py \
ImmersedBoundariesViewNeptune.py \
InitializationView.py \
InterfacialEnthalpyView.py \
InterfacialForcesView.py \
InterfacialAreaView.py \
LagrangianBoundariesView.py \
LagrangianOutputView.py \
LagrangianStatisticsView.py \
LagrangianView.py \
LocalizationView.py \
MainFieldsView.py \
MainFieldsInitializationView.py \
MainFieldsSourceTermsView.py \
MobileMeshView.py \
NonCondensableView.py \
NotebookView.py \
NucleateBoilingView.py \
NumericalParamEquationView.py \
NumericalParamEquationViewNeptune.py \
NumericalParamGlobalView.py \
OutputControlView.py \
OutputSurfacicVariablesView.py \
OutputVolumicVariablesView.py \
PreProcessingInformationsView.py \
PerformanceTuningView.py \
PorosityView.py \
PreprocessingView.py \
ProfilesView.py \
QMegEditorView.py \
QMeiEditorView.py \
SalomeActors.py \
SalomeHandler.py \
SolutionDomainView.py \
SourceTermsView.py \
StartRestartView.py \
ThermalView.py \
TimeAveragesView.py \
TimeStepView.py \
TurboMachineryView.py \
TurbulenceView.py \
TurbulenceNeptuneView.py \
VerifyExistenceLabelDialogView.py \
WelcomeView.py \
XMLEditorView.py \
SpeciesView.py \
UsersControlView.py \
OutputFieldsView.py \
OpenTurnsDialogView.py \
SolidView.py \
ThermodynamicsView.py \
TimeStepViewNeptune.py

# PyQt User Interface files
UIFILES = \
AnalysisFeaturesForm.ui \
AtmosphericFlowsForm.ui \
BalanceForm.ui \
BatchRunningDebugOptionsHelpDialogForm.ui \
BatchRunningDialogForm.ui \
BatchRunningStopByIterationDialogForm.ui \
BodyForcesForm.ui \
BoundaryConditionsCoalInletForm.ui \
BoundaryConditionsCompressibleOutletForm.ui \
BoundaryConditionsConvectiveInletForm.ui \
BoundaryConditionsForm.ui \
BoundaryConditionsElectricalForm.ui \
BoundaryConditionsExternalHeadLossesForm.ui \
BoundaryConditionsMappedInletForm.ui \
BoundaryConditionsMeteoForm.ui \
BoundaryConditionsMobileMeshForm.ui \
BoundaryConditionsHydraulicHeadForm.ui \
BoundaryConditionsPressureForm.ui \
BoundaryConditionsRoughWallForm.ui \
BoundaryConditionsScalarsForm.ui \
BoundaryConditionsSlidingWallForm.ui \
BoundaryConditionsTurbulenceInletForm.ui \
BoundaryConditionsVelocityInletForm.ui \
BoundaryConditionsWallRadiativeTransferForm.ui \
CoalCombustionForm.ui \
CompressibleForm.ui \
ConjugateHeatTransferForm.ui \
GroundwaterForm.ui \
GroundwaterLawForm.ui \
DefineUserScalarsForm.ui \
ElectricalForm.ui \
FacesSelectionForm.ui \
FansForm.ui \
FluidCharacteristicsForm.ui \
FluidStructureInteractionAdvancedOptionsDialogForm.ui \
FluidStructureInteractionForm.ui \
GasCombustionForm.ui \
HeadLossesForm.ui \
IdentityAndPathesForm.ui \
ImmersedBoundariesNeptune.ui \
InitializationForm.ui \
LagrangianAdvancedOptionsDialogForm.ui \
LagrangianBoundariesForm.ui \
LagrangianForm.ui \
LagrangianOutputForm.ui \
LagrangianStatisticsForm.ui \
LocalizationForm.ui \
MeshQualityCriteriaLogDialogForm.ui \
MobileMeshForm.ui \
NotebookForm.ui \
NumericalParamEquationForm.ui \
NumericalParamGlobalForm.ui \
OpenTurnsDialogForm.ui \
OutputControlForm.ui \
OutputSurfacicVariablesForm.ui \
OutputVolumicVariablesForm.ui \
PerformanceTuningForm.ui \
PorosityForm.ui \
ProfilesForm.ui \
QMeiEditorForm.ui \
PreprocessingForm.ui \
SolutionDomainForm.ui \
SourceTermsForm.ui \
StartRestartAdvancedDialogForm.ui \
StartRestartForm.ui \
ThermalRadiationAdvancedDialogForm.ui \
ThermalForm.ui \
TimeAveragesForm.ui \
TimeStepForm.ui \
TurboMachineryForm.ui \
TurbulenceAdvancedOptionsDialogForm.ui \
TurbulenceForm.ui \
TurbulenceNeptune.ui \
VerifyExistenceLabelDialogForm.ui \
VolumicZoneAdvancedDialogForm.ui \
WelcomeForm.ui \
XMLEditorForm.ui \
Noncondensable.ui \
Turbulence.ui \
Species.ui\
InterfacialForces.ui \
InterfacialArea.ui \
MainFields.ui \
GlobalNumericalParameters.ui \
GlobalNumericalParametersAdvancedOptionsDialog.ui \
InterfacialEnthalpy.ui \
NucleateBoiling.ui \
DropletCondensationEvaporation.ui \
MainFieldsInitialization.ui \
MainFieldsSourceTerms.ui \
CathareCouplingForm.ui \
BoundaryConditionsNeptune.ui \
UsersControl.ui \
OutputFields.ui \
Solid.ui \
Thermodynamics.ui \
NumericalParamEquationNeptune.ui \
BoundaryConditionsPressure.ui \
BoundaryConditionsEnergy.ui \
BoundaryConditionsFraction.ui \
BoundaryConditionsNonCondensable.ui \
BoundaryConditionsScalar.ui \
BoundaryConditionsWall.ui \
BoundaryConditionsInterfacialArea.ui \
TimeStep.ui

# PyQt Resources files

QRCFILES = \
resources_pages.qrc

# Distribute icons directory, resources files and user interface files

EXTRA_DIST = \
icons \
$(UIFILES) \
$(QRCFILES)

# Generated files

FORMS = $(UIFILES:.ui=.py)
RESOURCES = $(QRCFILES:.qrc=_rc.py)

# Specific rules

PYRCC4VER = `$(PYTHON) --version 2>&1 | cut -c 8`

SUFFIXES = .ui .qrc _rc.py

if HAVE_QT5
  PYUIC=$(PYUIC5)
else
  PYUIC=$(PYUIC4)
endif

if HAVE_QT5
  PYRCC = $(PYRCC5)
else
  PYRCC = $(PYRCC4) -py$(PYRCC4VER)
endif

.ui.py:
	$(PYUIC) -o $@ $<

.qrc_rc.py:
	$(PYRCC) -o $@ $<

all-local: $(FORMS) $(RESOURCES)

clean-local:
	-rm -f $(FORMS) $(RESOURCES)

# Install Python library

pagesdir = $(pkgpythondir)/Pages
dist_pages_PYTHON = \
__init__.py \
$(PYFILES)

nodist_pages_PYTHON = \
$(RESOURCES) \
$(FORMS)
