#------------------------------------------------------------------------------
#   This file is part of the code_saturne Kernel, element of the
#   code_saturne CFD tool.
#
#   Copyright (C) 2009-2022 EDF S.A., France
#
#   The code_saturne Kernel is free software; you can redistribute it
#   and/or modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version 2 of
#   the License, or (at your option) any later version.
#
#   The code_saturne Kernel is distributed in the hope that it will be
#   useful, but WITHOUT ANY WARRANTY; without even the implied warranty
#   of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public Licence
#   along with the Code_Saturne Kernel; if not, write to the
#   Free Software Foundation, Inc.,
#   51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#-------------------------------------------------------------------------------

SUBDIRS = doxygen

DIST_SUBDIRS = $(SUBDIRS)

EXTRA_DIST =

# Macro-rules so as to compile/install different output types

doc: html
install-doc: install-html
